Added button navigation between sections

--- a/main/html/content-areas/CA2 - Intro To Programming/subtopic/2.5-input-and-output/2.5-input-and-output.html
+++ b/main/html/content-areas/CA2 - Intro To Programming/subtopic/2.5-input-and-output/2.5-input-and-output.html
@@ -172,6 +172,21 @@ file.write("Hello")
         </section>
     </main>
 
+    <arrow-Nav>
+        <a href="../2.4-operators/2.4-operators.html" id="back arrow-link">
+            <img src="../../../../../images/back-arrow.png" alt="back arrow" width="100" height="100" id="arrow"/>
+        </a>
+        
+        <a href="../../intro-to-programming.html" id="home-link">
+            <img src="../../../../../images/home.png" alt="home" width="100" height="100" id="arrow"/>
+        </a>
+
+        <a href="../2.6-actions/2.6-actions.html" id="next arrow-link">
+            <img src="../../../../../images/next-arrow.png" alt="next arrow" width="100" height="100" id="arrow"/>
+        </a>
+    </arrow-Nav> 
+    
+
     <footer>
         <p>&copy; 2025 TLevelTutor. All rights reserved.</p>
         <p>For more information, visit our <a href="">Coming Soon</a>.</p>
