--- a/main/html/content-areas/CA5 - Business Context/subtopic/5.4-technical-change-management/5.4-technical-change-management.html
+++ b/main/html/content-areas/CA5 - Business Context/subtopic/5.4-technical-change-management/5.4-technical-change-management.html
@@ -495,7 +495,18 @@
             <li><strong>Time:</strong> Tight deadlines may require prioritizing features or simplifying implementation.</li>
             <li><strong>Human and Technological Resources:</strong> Lack of skilled personnel or suitable technology can delay progress or reduce effectiveness.</li>
         </ul>
-</main>
+    </main>
+
+    <arrow-Nav>
+        <a href="../5.3-risk-to-organisations-of-using-digital-systems/5.3-risk-to-organisations-of-using-digital-systems.html" id="back arrow-link">
+            <img src="../../../../../images/back-arrow.png" alt="back arrow" width="100" height="100" id="arrow"/>
+        </a>
+
+        <a href="../../business-context.html" id="home-link">
+            <img src="../../../../../images/home.png" alt="home" width="100" height="100" id="arrow"/>
+        </a>
+    </arrow-Nav> 
+    
     
     <footer>
         <p>&copy; 2025 TLevelTutor. All rights reserved.</p>
