--- a/main/html/employer-set-project/Task 2-Debugging-Existing-Code/Task2.html
+++ b/main/html/employer-set-project/Task 2-Debugging-Existing-Code/Task2.html
@@ -102,6 +102,20 @@
         </ul>
     </main>
     
+    <arrow-Nav>
+        <a href="../Task 1-Planning-A-Project/Task1.html" id="back arrow-link">
+            <img src="../../../images/back-arrow.png" alt="back arrow" width="100" height="100" id="arrow"/>
+        </a>
+
+        <a href="../../index.html" id="home-link">
+            <img src="../../../images/home.png" alt="home" width="100" height="100" id="arrow"/>
+        </a>
+        
+        <a href="../Task 3-Designing-A-Solution/Task3.html" id="next arrow-link">
+            <img src="../../../images/next-arrow.png" alt="next arrow" width="100" height="100" id="arrow"/>
+        </a>
+    </arrow-Nav> 
+
     <footer>
         <p>&copy; 2025 TLevelTutor. All rights reserved.</p>
         <p>For more information, visit our <a href="">Coming Soon</a>.</p>
