--- a/main/html/content-areas/CA1 - Problem Solving/subtopic/1.1-computational-thinking/1.1-Computational-Thinking.html
+++ b/main/html/content-areas/CA1 - Problem Solving/subtopic/1.1-computational-thinking/1.1-Computational-Thinking.html
@@ -431,6 +431,17 @@
             </li>
         </ul>
     </main>
+    
+    <arrow-Nav>
+        <a href="../../problem-solving.html" id="back arrow-link">
+            <img src="../../../../../images/back-arrow.png" alt="back arrow" width="100" height="100" id="arrow"/>
+        </a>
+
+        <a href="../1.2-algorithmic-design/1.2-algorithmic-design.html" id="next arrow-link">
+            <img src="../../../../../images/next-arrow.png" alt="next arrow" width="100" height="100" id="arrow"/>
+        </a>
+    </arrow-Nav> 
+    
     <footer>
         <p>&copy; 2025 TLevelTutor. All rights reserved.</p>
         <p>For more information, visit our <a href="">Coming Soon</a>.</p>
