--- a/main/html/content-areas/CA3 - Emerging Issues/subtopic/3.1-impact-of-digital-technologies/3.1-impact-of-digital-technologies.html
+++ b/main/html/content-areas/CA3 - Emerging Issues/subtopic/3.1-impact-of-digital-technologies/3.1-impact-of-digital-technologies.html
@@ -400,6 +400,17 @@
             </ul>
         </section>
     </main>
+    
+    <arrow-Nav>
+        <a href="../../emerging-issues.html" id="back arrow-link">
+            <img src="../../../../../images/back-arrow.png" alt="back arrow" width="100" height="100" id="arrow"/>
+        </a>
+
+        <a href="../3.2-emerging-technologies/3.2-emerging-technologies.html" id="next arrow-link">
+            <img src="../../../../../images/next-arrow.png" alt="next arrow" width="100" height="100" id="arrow"/>
+        </a>
+    </arrow-Nav>
+    
     <footer>
             <p>&copy; 2025 TLevelTutor. All rights reserved.</p>
             <p>For more information, visit our <a href="">Coming Soon</a>.</p>
