--- a/main/html/content-areas/CA4 - Legislation And Regulatory Requirements/subtopic/4.1-legislation/4.1-legislation.html
+++ b/main/html/content-areas/CA4 - Legislation And Regulatory Requirements/subtopic/4.1-legislation/4.1-legislation.html
@@ -743,6 +743,17 @@
 
         </section>
     </main>
+    
+    <arrow-Nav>
+        <a href="../../legislation-and-regulatory-requirements.html" id="back arrow-link">
+            <img src="../../../../../images/back-arrow.png" alt="back arrow" width="100" height="100" id="arrow"/>
+        </a>
+
+        <a href="../4.2-guidelines/4.2-guidelines.html" id="next arrow-link">
+            <img src="../../../../../images/next-arrow.png" alt="next arrow" width="100" height="100" id="arrow"/>
+        </a>
+    </arrow-Nav>
+    
     <footer>
         <p>&copy; 2025 TLevelTutor. All rights reserved.</p>
         <p>For more information, visit our <a href="">Coming Soon</a>.</p>
