--- a/main/html/employer-set-project/Pre-Task/Pre-Task.html
+++ b/main/html/employer-set-project/Pre-Task/Pre-Task.html
@@ -69,6 +69,17 @@
             <li>Focus on understanding the goals and requirements.</li>
         </ul>
     </main>
+
+    <arrow-Nav>
+        <a href="../../index.html" id="back arrow-link">
+            <img src="../../../images/back-arrow.png" alt="back arrow" width="100" height="100" id="arrow"/>
+        </a>
+
+        <a href="../Task 1-Planning-A-Project/Task1.html" id="next arrow-link">
+            <img src="../../../images/next-arrow.png" alt="next arrow" width="100" height="100" id="arrow"/>
+        </a>
+    </arrow-Nav>   
+    
     <footer>
         <p>&copy; 2025 TLevelTutor. All rights reserved.</p>
         <p>For more information, visit our <a href="">Coming Soon</a>.</p>
