--- a/main/html/employer-set-project/Task 1-Planning-A-Project/Task1.html
+++ b/main/html/employer-set-project/Task 1-Planning-A-Project/Task1.html
@@ -144,6 +144,20 @@
         </ul>
     </main>
 
+    <arrow-Nav>
+        <a href="../Pre-Task/Pre-Task.html" id="back arrow-link">
+            <img src="../../../images/back-arrow.png" alt="back arrow" width="100" height="100" id="arrow"/>
+        </a>
+
+        <a href="../../index.html" id="home-link">
+            <img src="../../../images/home.png" alt="home" width="100" height="100" id="arrow"/>
+        </a>
+        
+        <a href="../Task 2-Debugging-Existing-Code/Task2.html" id="next arrow-link">
+            <img src="../../../images/next-arrow.png" alt="next arrow" width="100" height="100" id="arrow"/>
+        </a>
+    </arrow-Nav>  
+    
     <footer>
         <p>&copy; 2025 TLevelTutor. All rights reserved.</p>
         <p>For more information, visit our <a href="">Coming Soon</a>.</p>
